fix: adjust CSS layout for better spacing and sizing

--- a/src/pages/public/checkout/Checkout.scss
+++ b/src/pages/public/checkout/Checkout.scss
@@ -1,9 +1,6 @@
 @use "../../../index.scss" as *;
 .checkout {
-  height: auto;
-  box-sizing: border-box;
   padding: 1rem;
-
   .wrapper {
     display: flex;
     margin: 0 auto;
@@ -14,7 +11,6 @@
     h2 {
       justify-self: left;
       margin-bottom: 20px;
-      // color: #f2f2f2;
       font-size: calc(1.3vw + 1rem);
       @include mobile{
         justify-self: center;
